--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,8 @@
 envlist = py27, py36
 
 [testenv]
+# to be able to choose pip version with VIRTUALENV_PIP=20.2
+download = True
 install_command =
     pip install --no-cache-dir \
         --find-links file://{toxinidir}/../../debug/config/common/dist/ \
